--- a/client/src/components/News/NewsMain/NewsItem/NewsItem.module.css
+++ b/client/src/components/News/NewsMain/NewsItem/NewsItem.module.css
@@ -2,6 +2,8 @@
     height: 500px;
     box-shadow: 0 0 5px 0;
     padding: 10px;
+    text-decoration: none;
+    color: var(--primary-text);
 }
 
 .item > img {
